# Learn_CREWAI

./: .env.example  .gitignore  improvements.md  output.md
advanced_crewai/: README.md  pyproject.toml
advanced_crewai/src/advanced_crewai/: crew.py  main.py  rlhf_crew.py  rlhf_feedback.json
advanced_crewai/src/advanced_crewai/config/: agents.yaml  tasks.yaml
basic_crewai/: README.md  pyproject.toml
basic_crewai/src/basic_crewai/: crew.py  main.py
chat_bot/: .gitignore  README.md  pyproject.toml
chat_bot/src/chat_bot/: crew.py  main.py
chat_bot/src/chat_bot/config/: agents.yaml  tasks.yaml
poem_flow/: essay_output.md  poem.txt  pyproject.toml  story_output.md
poem_flow/src/poem_flow/: main.py
poem_flow/src/poem_flow/crews/essay_crew/: essay_crew.py
poem_flow/src/poem_flow/crews/essay_crew/config/: agents.yaml  tasks.yaml
poem_flow/src/poem_flow/crews/story_crew/: story_crew.py
poem_flow/src/poem_flow/crews/story_crew/config/: agents.yaml  tasks.yaml
react_agent/: #febonacci series.py  agent.ipynb
