[project]
name = "poem_flow"
version = "0.1.0"
description = "poem_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
kickoff = "poem_flow.main:kickoff"
run_crew = "poem_flow.main:kickoff"
plot = "poem_flow.main:plot"
run_with_trigger = "poem_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

# ── Intel Mac fix ─────────────────────────────────────────────────────────────
# onnxruntime dropped macOS x86_64 wheels after v1.23.0.
# This override forces uv to pick the last compatible version on Intel Macs.
[tool.uv]
override-dependencies = [
    "onnxruntime<=1.23.0 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
